# CulcaMaid

./: .gitignore  CMakeLists.txt  LICENSE  readme.md  res.qrc
XGui/: CMakeLists.txt  readme.md
XGui/XWin/: XWin.cpp  XWin.h  readme.md
XGui/include/: XCalendar.h  XWin.h
XGui/source/: XCalendar.cpp  XWin.cpp
res/qss/: all.qss  mainwin.qss  popmenu.qss  standard.qss
source/: CMakeLists.txt  main.cpp  res.qrc
source/Forms/: readme.md
source/Forms/InputEdit/: InputEdit.cpp  InputEdit.h
source/Forms/MainWin/: MainWin.cpp  MainWin.h  MainWin.ui
source/Forms/PageDate/: PageDate.cpp  PageDate.h  PageDate.ui
source/Forms/PageFuncPlot/: PageEditPlot.cpp  PageEditPlot.h  PageEditPlot.ui  PageFuncPlot.cpp  PageFuncPlot.h  PageFuncPlot.ui
source/Forms/PageHistory/: PageHistory.cpp  PageHistory.h  PageHistory.ui
source/Forms/PageProgram/: PageProgram.cpp  PageProgram.ui
source/Forms/PageRelation/: PageRelation.h
source/Forms/PageScience/: PageScience.cpp  PageScience.h
source/Forms/PageStandard/: PageStandard.cpp  PageStandard.h  PageStandard.ui
source/Forms/PopMenu/: PopMenu.cpp  PopMenu.ui  PopMenuItem.cpp
source/Main/: MainWin.cpp  MainWin.h  MainWin.ui  main.cpp
source/Widget/ExpressionBar/: ExpressionBar.cpp  ExpressionBar.h
source/Widget/InputText/: InputText.cpp  InputText.h
source/Widget/KeyBoard/: ScienceKB.cpp  ScienceKB.h  StandardKB.cpp  StandardKB.h
source/Widget/PageHistory/: PageHistory.cpp  PageHistory.h  PageHistory.ui  historyitem.cpp  historyitem.h
source/Widget/Plot/: Plot.h  PlotDelegate.cpp  PlotDelegate.h  PlotEdit.cpp  PlotEdit.h  PlotModel.cpp  PlotModel.h  PlotPainter.cpp  PlotPainter.h  PlotSampler.cpp  PlotSampler.h
source/Widget/PopMenu/: PopMenu.cpp  PopMenu.h  PopMenu.ui  PopMenuItem.cpp  PopMenuItem.ui
source/assets/: icon.rc  res.qrc
source/assets/qss/: all.qss  culpage.qss  exprbar.qss  history.qss  pagedata.qss  pageplotedit.qss  popkb.qss  sciencekb.qss  standard.qss  standardkb.qss
source/core/: Load.cpp  Load.h  expr.cpp  expr.h
source/expr/: expr.cpp  expr.h
source/res/qss/: mainwin.qss  popmenu.qss  standard.qss
source/src/: MainWin.cpp  MainWin.h  main.cpp
source/src/Forms/PageFuncPlot/: PageFuncPlot.cpp  PageFuncPlot.h
source/src/Forms/PageScience/: PageScience.cpp
source/unit/: LoadFile.cpp  LoadFile.h
src/: MainWin.cpp  MainWin.h  MainWin.ui  main.cpp
src/Forms/PageDate/: PageDate.cpp  PageDate.h  PageDate.ui
src/Forms/PageFuncPlot/: PageFuncPlot.ui
src/Forms/PageHistory/: PageHistory.ui
src/Forms/PageProgram/: PageProgram.h
src/Forms/PageRelation/: PageRelation.cpp  PageRelation.ui
src/Forms/PageScience/: PageScience.ui
src/Forms/PageSetting/: PageSetting.cpp  PageSetting.h  PageSetting.ui
src/Forms/PageStandard/: PageStandard.cpp  PageStandard.h  PageStandard.ui
src/Forms/PopMenu/: PopMenu.cpp  PopMenu.h  PopMenu.ui  PopMenuItem.h  PopMenuItem.ui
src/Forms/SettingWin/: SettingWin.cpp  SettingWin.h  SettingWin.ui
src/expr/: expr.cpp  expr.h
src/unit/: LoadFile.cpp  LoadFile.h
test/: CMakeLists.txt  main.cpp
test/testWin/: TestWin.cpp  TestWin.h
